--- a/src/app/pdashboard/pdashboard.scss
+++ b/src/app/pdashboard/pdashboard.scss
@@ -8,3 +8,124 @@ mat-button-toggle {
   min-height: 12px !important; /* ความสูงรวมของปุ่ม */
 }
 
+.card {
+  border: 1px solid #c4c6d0;
+  padding: 15px;
+  border-radius: 6px;
+
+  .test-box {
+    display: flex;
+    flex-direction: column;
+    // width: 200px;
+    height: 216px;
+    gap: 20px;
+
+    p {
+      font-size: 24px;
+      font-weight: 500;
+    }
+    .car-box {
+      border: 1px solid #c4c6d0;
+      background-color: #c4c6d0;
+      border-radius: 6px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-direction: column;
+      padding: 20px 20px 20px 20px;
+      gap: 10px;
+      .unit {
+        .txt-unit {
+          font-size: 12px;
+          font-weight: 500;
+          margin-left: 10px;
+          opacity: 0.8;
+        }
+      }
+      span {
+        font-size: 24px;
+        font-weight: 700;
+        opacity: 0.8;
+      }
+      p {
+        font-size: 16px;
+        font-weight: 500;
+      }
+    }
+    .solar-box {
+      display: flex;
+      flex-direction: row;
+      border: 1px solid black;
+      width: 100%;
+      .box-1 {
+        background-color: gray;
+        text-align: center;
+        width: 40%;
+      }
+      .box-2 {
+        background-color: white;
+        text-align: center;
+        width: 60%;
+      }
+      .txt-1 {
+        font-size: 12px;
+        text-align: left;
+        width: 40%;
+        line-height: 0.1;
+      }
+      .txt-2 {
+        font-size: 12px;
+        text-align: right;
+        width: 60%;
+        line-height: 0.1;
+      }
+    }
+  }
+  .footer {
+    display: flex;
+    justify-content: space-between;
+    span {
+      font-size: 14px;
+      font-weight: 500;
+    }
+  }
+}
+
+.header-box{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+  justify-content: space-between;
+}
+
+.time-box {
+  background: #ffffff;
+  // padding: 2px;
+  width: 25rem;
+  height: fit-content;
+  display: flex;
+  flex-direction: row;
+  overflow: hidden;
+  border: 2px solid #e4e4e7;
+  border-radius: 6px;
+  align-items: center;
+  user-select: none;
+  cursor: pointer;
+  .activeIndexs {
+    // padding: 3px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #F4F4F5;
+    border-radius: 6px;
+  }
+  .body-slime-btn {
+    text-wrap: nowrap;
+    padding: 2px;
+    display: flex;
+    color: black;
+    place-content: center;
+    font-size: 14px;
+    text-align: center;
+  }
+}
