--- a/src/app/pdashboard/pdashboard.html
+++ b/src/app/pdashboard/pdashboard.html
@@ -24,7 +24,7 @@
 
     <div class="grid gap-4 lg:grid-cols-5 md:grid-cols-3 sm:grid-cols-2 xs:grid-cols-1">
       <!-- Overall status -->
-      <mat-card
+      <!-- <mat-card
         appearance="outlined"
         class="rounded-2xl border-slate-200 shadow-sm hover:shadow-md hover:-translate-y-0.5 transition-all duration-150 bg-gradient-to-b from-slate-50 to-white"
       >
@@ -108,7 +108,62 @@
             </svg>
           </span>
         </mat-card-footer>
-      </mat-card>
+      </mat-card> -->
+      <div class="card">
+        <div class="status-card">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="green"
+            class="size-30"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M15.182 15.182a4.5 4.5 0 0 1-6.364 0M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0ZM9.75 9.75c0 .414-.168.75-.375.75S9 10.164 9 9.75 9.168 9 9.375 9s.375.336.375.75Zm-.375 0h.008v.015h-.008V9.75Zm5.625 0c0 .414-.168.75-.375.75s-.375-.336-.375-.75.168-.75.375-.75.375.336.375.75Zm-.375 0h.008v.015h-.008V9.75Z"
+            />
+          </svg>
+          GOOD
+        </div>
+        <div class="footer1">
+          <div class="foot-card">
+            MoM
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="red"
+              class="size-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M15.182 16.318A4.486 4.486 0 0 0 12.016 15a4.486 4.486 0 0 0-3.198 1.318M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0ZM9.75 9.75c0 .414-.168.75-.375.75S9 10.164 9 9.75 9.168 9 9.375 9s.375.336.375.75Zm-.375 0h.008v.015h-.008V9.75Zm5.625 0c0 .414-.168.75-.375.75s-.375-.336-.375-.75.168-.75.375-.75.375.336.375.75Zm-.375 0h.008v.015h-.008V9.75Z"
+              />
+            </svg>
+          </div>
+          <div class="foot-card">
+            YoY
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="green"
+              class="size-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M15.182 15.182a4.5 4.5 0 0 1-6.364 0M21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0ZM9.75 9.75c0 .414-.168.75-.375.75S9 10.164 9 9.75 9.168 9 9.375 9s.375.336.375.75Zm-.375 0h.008v.015h-.008V9.75Zm5.625 0c0 .414-.168.75-.375.75s-.375-.336-.375-.75.168-.75.375-.75.375.336.375.75Zm-.375 0h.008v.015h-.008V9.75Z"
+              />
+            </svg>
+          </div>
+        </div>
+      </div>
       <!-- GHG Reduction -->
       <!-- <mat-card
         appearance="outlined"
@@ -217,7 +272,7 @@
     <h1 class="text-xl font-semibold">Traffic Performance</h1>
     <div class="grid grid-cols-4 gap-2">
       <!-- Traffic Status -->
-      <mat-card
+      <!-- <mat-card
         appearance="outlined"
         class="rounded-2xl border-slate-200 shadow-sm hover:shadow-md hover:-translate-y-0.5 transition-all duration-150 bg-gradient-to-b from-slate-50 to-white"
       >
@@ -302,8 +357,77 @@
             </svg>
           </span>
         </mat-card-footer>
-      </mat-card>
-
+      </mat-card> -->
+      <div class="card">
+        <div class="status-card">
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 24 24"
+            fill="#ffbb00"
+            class="size-40"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25Zm3 10.5a.75.75 0 0 0 0-1.5H9a.75.75 0 0 0 0 1.5h6Z"
+              clip-rule="evenodd"
+            />
+          </svg>
+          GOOD
+        </div>
+        <div class="footer1">
+          <div class="foot-card1">
+            WoW
+            <div class="circle">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="white"
+                class="size-4"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M2.25 6 9 12.75l4.286-4.286a11.948 11.948 0 0 1 4.306 6.43l.776 2.898m0 0 3.182-5.511m-3.182 5.51-5.511-3.181"
+                />
+              </svg>
+            </div>
+          </div>
+          <div class="foot-card1">
+            MoM
+          <div class="circle">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              fill="white"
+              class="size-4"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M4.25 12a.75.75 0 0 1 .75-.75h14a.75.75 0 0 1 0 1.5H5a.75.75 0 0 1-.75-.75Z"
+                clip-rule="evenodd"
+              />
+            </svg>
+          </div>
+          </div>
+          <div class="foot-card1">
+            YoY
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              viewBox="0 0 24 24"
+              fill="#ffbb00"
+              class="size-5"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25Zm3 10.5a.75.75 0 0 0 0-1.5H9a.75.75 0 0 0 0 1.5h6Z"
+                clip-rule="evenodd"
+              />
+            </svg>
+          </div>
+        </div>
+      </div>
       <!-- People Counting -->
       <!-- <mat-card
         class="rounded-2xl border-slate-200 shadow-sm hover:shadow-md hover:-translate-y-0.5 transition-all duration-150 bg-gradient-to-b from-slate-50 to-white"
@@ -354,25 +478,25 @@
       </mat-card> -->
 
       @for (item of dataTraffic; track item.title) {
-      <div class="card">
-        <div class="test-box">
+      <div class="cardt">
+        <div class="t-box">
           <p>{{ item.title }}</p>
-          <div class="car-box">
+          <div class="tcar-box">
             <div class="unit">
-              <p class=" mb-1">Cars</p>
+              <p class="mb-1">Cars</p>
               <span>{{ item.car }}</span>
               <span class="txt-unit">{{ item.unit }}</span>
             </div>
           </div>
-          <div class="car-box">
+          <div class="tcar-box">
             <div class="unit">
-              <p class=" mb-1">Motorcycle</p>
+              <p class="mb-1">Motorcycle</p>
               <span>{{ item.motorcycle }}</span>
               <span class="txt-unit">{{ item.unit }}</span>
             </div>
           </div>
         </div>
-        <div class="footer mt-6">
+        <div class="footert">
           <span>MoM -23%</span>
           <span>YoY +20%</span>
         </div>
