--- a/src/app/pdashboard/pdashboard.scss
+++ b/src/app/pdashboard/pdashboard.scss
@@ -13,6 +13,15 @@ mat-button-toggle {
   padding: 15px;
   border-radius: 6px;
 
+  .status-card{
+    display: flex;
+    flex-direction: column;
+    width : 100%;
+    align-items: center;
+    color: black;
+    font-size: 24px;
+    font-weight: 700;
+    }
   .test-box {
     display: flex;
     flex-direction: column;
@@ -89,6 +98,47 @@ mat-button-toggle {
       font-weight: 500;
     }
   }
+  .footer1 {
+    display: flex;
+    justify-content: space-between;
+    padding-top: 60px;
+    gap: 10px;
+    .circle{
+      border: 1px solid #c4c6d0;
+      border-radius: 100%;
+      display: flex;
+      background-color: red;
+    }
+    .foot-card{
+      border: 1px solid #c4c6d0;
+      align-items: center;
+      width: 50%;
+      padding: 3px;
+      border-radius: 50px;
+      font-size: 14px;
+      color: gray;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+    }
+    .foot-card1 {
+      border: 1px solid #c4c6d0;
+      align-items: center;
+      gap: 3px;
+      width: 100%;
+      padding: 3px;
+      border-radius: 50px;
+      font-size: 12px;
+      color: gray;
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+    }
+    span {
+      font-size: 14px;
+      font-weight: 500;
+    }
+  }
 }
 
 .header-box{
@@ -127,5 +177,88 @@ mat-button-toggle {
     place-content: center;
     font-size: 14px;
     text-align: center;
+  }
+}
+.cardt{
+  border: 1px solid #c4c6d0;
+  padding: 15px 15px 5px 15px;
+  border-radius: 6px;
+
+  .t-box {
+    display: flex;
+    flex-direction: column;
+    // width: 200px;
+    height: 216px;
+    gap: 20px;
+
+    p {
+      font-size: 24px;
+      font-weight: 500;
+    }
+    .tcar-box {
+      border: 1px solid #c4c6d0;
+      background-color: #c4c6d0;
+      border-radius: 6px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-direction: column;
+      padding: 20px 20px 20px 20px;
+      gap: 10px;
+      .unit {
+        .txt-unit {
+          font-size: 12px;
+          font-weight: 500;
+          margin-left: 10px;
+          opacity: 0.8;
+        }
+      }
+      span {
+        font-size: 24px;
+        font-weight: 700;
+        opacity: 0.8;
+      }
+      p {
+        font-size: 16px;
+        font-weight: 500;
+      }
+    }
+    .solar-box {
+      display: flex;
+      flex-direction: row;
+      border: 1px solid black;
+      width: 100%;
+      .box-1 {
+        background-color: gray;
+        text-align: center;
+        width: 40%;
+      }
+      .box-2 {
+        background-color: white;
+        text-align: center;
+        width: 60%;
+      }
+      .txt-1 {
+        font-size: 12px;
+        text-align: left;
+        width: 40%;
+        line-height: 0.1;
+      }
+      .txt-2 {
+        font-size: 12px;
+        text-align: right;
+        width: 60%;
+        line-height: 0.1;
+      }
+    }
+  }
+  .footert {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 35px;
+    span {
+      font-size: 14px;
+      font-weight: 500;
+    }
   }
 }
