--- a/src/app/pdashboard/pdashboard.scss
+++ b/src/app/pdashboard/pdashboard.scss
@@ -34,8 +34,8 @@ mat-button-toggle {
       font-weight: 500;
     }
     .car-box {
-      border: 1px solid #c4c6d0;
-      background-color: #c4c6d0;
+      border: 1px solid #e7e7e7;
+      background-color: #e7e7e7;
       border-radius: 6px;
       display: flex;
       justify-content: space-between;
@@ -196,8 +196,8 @@ mat-button-toggle {
       font-weight: 500;
     }
     .tcar-box {
-      border: 1px solid #c4c6d0;
-      background-color: #c4c6d0;
+      border: 1px solid #e7e7e7;
+      background-color: #e7e7e7;
       border-radius: 6px;
       display: flex;
       justify-content: space-between;
