--- a/src/app/pdashboard/pdashboard.html
+++ b/src/app/pdashboard/pdashboard.html
@@ -111,7 +111,11 @@
       </mat-card> -->
       <div class="card">
         <div class="status-card">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="green" class="size-30">
+          <svg 
+          xmlns="http://www.w3.org/2000/svg" 
+          viewBox="0 0 24 24" 
+          fill="green"
+           class="size-30">
             <path
               fill-rule="evenodd"
               d="M12 2.25c-5.385 0-9.75 4.365-9.75 9.75s4.365 9.75 9.75 9.75 9.75-4.365 9.75-9.75S17.385 2.25 12 2.25Zm-2.625 6c-.54 0-.828.419-.936.634a1.96 1.96 0 0 0-.189.866c0 .298.059.605.189.866.108.215.395.634.936.634.54 0 .828-.419.936-.634.13-.26.189-.568.189-.866 0-.298-.059-.605-.189-.866-.108-.215-.395-.634-.936-.634Zm4.314.634c.108-.215.395-.634.936-.634.54 0 .828.419.936.634.13.26.189.568.189.866 0 .298-.059.605-.189.866-.108.215-.395.634-.936.634-.54 0-.828-.419-.936-.634a1.96 1.96 0 0 1-.189-.866c0-.298.059-.605.189-.866Zm2.023 6.828a.75.75 0 1 0-1.06-1.06 3.75 3.75 0 0 1-5.304 0 .75.75 0 0 0-1.06 1.06 5.25 5.25 0 0 0 7.424 0Z"
@@ -194,7 +198,9 @@
 
       @for (item of dataEnvironmental; track item.title) {
       <div class="card">
-        <div class="alert">
+        <div class="test-box">
+          <div class="alert">
+          <p>{{ item.title }}</p>
           <svg 
             xmlns="http://www.w3.org/2000/svg" 
             viewBox="0 0 24 24" 
@@ -207,8 +213,6 @@
             />
           </svg>
         </div>
-        <div class="test-box">
-          <p>{{ item.title }}</p>
           <div class="car-box">
             <!-- <p>Cars</p> -->
             <div class="unit">
@@ -471,7 +475,9 @@
 
       @for (item of dataTraffic; track item.title) {
       <div class="cardt">
-        <div class="alert">
+        <div class="t-box">
+          <div class="alert">
+            <p>{{ item.title }}</p>
           <svg
               xmlns="http://www.w3.org/2000/svg"
               viewBox="0 0 24 24"
@@ -485,8 +491,6 @@
               />
             </svg>
         </div>
-        <div class="t-box">
-          <p>{{ item.title }}</p>
           <div class="tcar-box">
             <div class="unit">
               <p class="mb-1">Cars</p>
@@ -503,6 +507,7 @@
           </div>
         </div>
         <div class="footert">
+          <span>WoW -23%</span>
           <span>MoM -23%</span>
           <span>YoY +20%</span>
         </div>
