--- a/src/app/chart/chart.component.html
+++ b/src/app/chart/chart.component.html
@@ -1,3 +1,3 @@
-<div>
-  <canvas #chartCanvas></canvas>
+<div class="w-full h-72 md:h-96">
+  <canvas #chartCanvas class="w-full h-full"></canvas>
 </div>
