--- a/src/app/pdashboard/pdashboard.scss
+++ b/src/app/pdashboard/pdashboard.scss
@@ -160,6 +160,14 @@ mat-button-toggle {
   padding-top: 50px;
 }
 
+.header-box1{
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+  justify-content: space-between;
+  padding-top: 50px;
+}
+
 .time-box {
   background: #ffffff;
   // padding: 2px;
@@ -279,4 +287,16 @@ mat-button-toggle {
       font-weight: 500;
     }
   }
+}
+
+.box{
+  background-color: #ffffff;
+  border-radius: 15px;
+  border-color: slategray;
+  border-width: 1px;
+  box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.1);
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
