--- a/src/app/pdashboard/pdashboard.scss
+++ b/src/app/pdashboard/pdashboard.scss
@@ -300,3 +300,13 @@ mat-button-toggle {
   flex-direction: column;
   gap: 8px;
 }
+
+.mat-mdc-table {
+  width: 100%;
+  max-height: 500px;
+  overflow: auto;
+}
+
+.mat-column-name {
+  height: 100px;
+}
